--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,27 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <button type="button" onClick="playSound('powerAttack')" class="btn">Power Attack</button>
+      <h3>Attacks</h3>
+      <div class="btn-group-vertical">
+        <button type="button" onClick="playSound('powerAttack')" class="btn btn-primary">Power Attack</button>
+        <button type="button" onClick="playSound('surpriseAttack')" class="btn btn-primary">Surprise Attack</button>
+        <button type="button" onClick="playSound('snatched')" class="btn btn-primary">Snatch</button>
+      </div>
     </div>
     <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Items</h3>
+      <div class="btn-group-vertical">
+        <button type="button" onClick="playSound('timeBlasterUnlocked')" class="btn btn-primary">Time Blaster Unlocked</button>
+        <button type="button" onClick="playSound('powerDiamond')" class="btn btn-primary">Power Diamond</button>
+      </div>
     </div>
     <div class="col-sm-4">
-      <h3>Column 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Station</h3>
+      <div class="btn-group-vertical">
+        <button type="button" onClick="playSound('stationComplete')" class="btn btn-primary">Station Complete</button>
+        <button type="button" onClick="playSound('shutdownCommencing')" class="btn btn-primary">Shutdown Commencing</button>
+        <button type="button" onClick="playSound('oneMinuteRemaining')" class="btn btn-primary">One Minute Remaining</button>
+      </div>
     </div>
   </div>
 </div>
