--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       });
     }
   </script>
+
 </head>
 <body>
 
@@ -22,7 +23,7 @@
 </div>
 
 <div class="container">
-  <div class="row">
+  <div class="row text-center">
     <div class="col-sm-4">
       <h3>Attacks</h3>
       <div class="btn-group-vertical">
@@ -31,6 +32,8 @@
         <button type="button" onClick="playSound('snatched')" class="btn btn-primary">Snatch</button>
       </div>
     </div>
+  </div>
+  <div class="row text-center">
     <div class="col-sm-4">
       <h3>Items</h3>
       <div class="btn-group-vertical">
@@ -38,6 +41,8 @@
         <button type="button" onClick="playSound('powerDiamond')" class="btn btn-primary">Power Diamond</button>
       </div>
     </div>
+  </div>
+  <div class="row text-center">
     <div class="col-sm-4">
       <h3>Station</h3>
       <div class="btn-group-vertical">
