--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Welcome to Base Commander</h1>
+  <h1>Welcome Commander</h1>
 </div>
 
 <div class="container">
-  <div class="row text-center">
+  <div class="text-center">
     <div class="col-sm-4">
       <h3>Attacks</h3>
       <div class="btn-group-vertical">
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <div class="row text-center">
+  <div class="text-center">
     <div class="col-sm-4">
       <h3>Items</h3>
       <div class="btn-group-vertical">
@@ -42,7 +42,7 @@
       </div>
     </div>
   </div>
-  <div class="row text-center">
+  <div class="text-center">
     <div class="col-sm-4">
       <h3>Station</h3>
       <div class="btn-group-vertical">
